# xyra-example

./: .gitignore  main.py  pyproject.toml
auth-jwt/: .env  auth_jwt.db  main.py  pyproject.toml
auth-jwt/config/: security.py  settings.py
auth-jwt/database/: __init__.py  engine.py
auth-jwt/database/models/: user.py
auth-jwt/handler/: crud.py  schemas.py
auth-jwt/middleware/: cors.py  jwt.py
auth-jwt/router/: __init__.py  auth.py  user.py
auth-jwt/tests/: test_auth_jwt.py
crud/: main.py  pyproject.toml  users.db
crud/tests/: test_crud.py
hello-world/: main.py  pyproject.toml
hello-world/tests/: test_hello_world.py
mysql/: .env  README.md  main.py  pyproject.toml
postgres/: README.md  main.py  pyproject.toml
pypy3/: main.py  pyproject.toml
rate-limiter/: README.md  pyproject.toml  rate_limiter.py
rate-limiter/tests/: test_rate_limiter.py
sqlalchemy/: main.py  pyproject.toml  users.db
staticfiles/: README.md  main.py  pyproject.toml
staticfiles/static/: style.css
staticfiles/templates/: index.html
staticfiles/tests/: test_staticfiles.py
swagger/: README.md  main.py  pyproject.toml
swagger/tests/: test_swagger.py
templates/: README.md  main.py  pyproject.toml
templates/templates/: home.html  index.html
templates/tests/: test_templates.py
websocket/: README.md  main.py  pyproject.toml
websocket/tests/: test_websocket.py
