[project]
name = "auth-jwt-example"
version = "0.1.0"
description = "JWT Authentication example for Xyra framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xyra>=0.1.7",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
]
