[project]
name = "mysql-crud-example"
version = "0.1.0"
description = "CRUD example with MySQL using Xyra"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xyra>=0.1.7",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=1.0.0",
    "aiomysql>=0.1.0",
]